package grpc_contracts

import (
	"context"
	"testing"
	"time"

	"github.com/stretchr/testify/assert"
	"github.com/stretchr/testify/require"
	"google.golang.org/grpc"
	"google.golang.org/grpc/codes"
	"google.golang.org/grpc/status"

	// Import generated protobuf clients (will be generated in T019-T027)
	// entitypb "aegisshield/shared/proto/entity-resolution"
)

// T012: Entity Resolution Service gRPC Contract Tests
// Constitutional Principle: Comprehensive Testing - Write failing tests first

func TestEntityResolutionService_ResolveEntity_ShouldFailInitially(t *testing.T) {
	// This test MUST fail initially - we haven't implemented the service yet
	// Following TDD: Red -> Green -> Refactor
	
	t.Skip("INTENTIONALLY FAILING: Entity Resolution Service not implemented yet (T012)")
	
	// Arrange
	conn, err := grpc.Dial("entity-resolution:9002", grpc.WithInsecure())
	require.NoError(t, err, "Should connect to entity resolution service")
	defer conn.Close()
	
	// client := entitypb.NewEntityResolutionServiceClient(conn)
	ctx, cancel := context.WithTimeout(context.Background(), 10*time.Second)
	defer cancel()
	
	// Act & Assert
	t.Run("should resolve person entity from multiple data sources", func(t *testing.T) {
		// Test entity resolution - FR-005 from spec
		request := &entitypb.ResolveEntityRequest{
			EntityType: entitypb.EntityType_PERSON,
			Attributes: map[string]string{
				"name":     "John Smith",
				"email":    "j.smith@email.com",
				"phone":    "+1-555-0123",
				"address":  "123 Main St, Anytown, ST 12345",
			},
			MatchThreshold: 0.85, // 85% confidence threshold
		}
		
		// response, err := client.ResolveEntity(ctx, request)
		// assert.NoError(t, err, "Should successfully resolve entity")
		// assert.NotEmpty(t, response.EntityId, "Should return resolved entity ID")
		// assert.GreaterOrEqual(t, response.ConfidenceScore, 0.85, "Should meet confidence threshold")
		// assert.NotEmpty(t, response.MatchedRecords, "Should return matched records")
		// 
		// // Verify matched records contain source information
		// for _, record := range response.MatchedRecords {
		//     assert.NotEmpty(t, record.SourceSystem, "Should include source system")
		//     assert.NotEmpty(t, record.RecordId, "Should include record ID")
		//     assert.GreaterOrEqual(t, record.MatchScore, 0.85, "Should meet match threshold")
		// }
	})
	
	t.Run("should resolve organization entity with hierarchical relationships", func(t *testing.T) {
		// Test organization resolution - FR-006 from spec
		request := &entitypb.ResolveEntityRequest{
			EntityType: entitypb.EntityType_ORGANIZATION,
			Attributes: map[string]string{
				"name":           "Global Finance Corp",
				"tax_id":         "12-3456789",
				"registration":   "DEL-2019-001234",
				"address":        "100 Wall Street, New York, NY 10005",
				"industry_code":  "NAICS-522110",
			},
			MatchThreshold: 0.90, // Higher threshold for organizations
		}
		
		// response, err := client.ResolveEntity(ctx, request)
		// assert.NoError(t, err, "Should successfully resolve organization")
		// assert.NotEmpty(t, response.EntityId, "Should return resolved entity ID")
		// assert.GreaterOrEqual(t, response.ConfidenceScore, 0.90, "Should meet confidence threshold")
		// 
		// // Test hierarchical relationships
		// if len(response.RelatedEntities) > 0 {
		//     for _, related := range response.RelatedEntities {
		//         assert.Contains(t, []entitypb.RelationshipType{
		//             entitypb.RelationshipType_SUBSIDIARY,
		//             entitypb.RelationshipType_PARENT_COMPANY,
		//             entitypb.RelationshipType_AFFILIATE,
		//         }, related.RelationshipType, "Should include valid relationship types")
		//     }
		// }
	})
	
	t.Run("should handle entity linking across transaction networks", func(t *testing.T) {
		// Test transaction-based entity linking - FR-007 from spec
		request := &entitypb.LinkEntitiesRequest{
			SourceEntityId: "entity-123",
			TransactionPattern: &entitypb.TransactionPattern{
				MinAmount:     1000.00,
				MaxAmount:     50000.00,
				TimeWindow:    "7d", // 7 days
				Frequency:     entitypb.FrequencyType_RECURRING,
			},
			LinkingThreshold: 0.80,
		}
		
		// response, err := client.LinkEntities(ctx, request)
		// assert.NoError(t, err, "Should successfully link entities")
		// assert.NotEmpty(t, response.LinkedEntities, "Should return linked entities")
		// 
		// for _, link := range response.LinkedEntities {
		//     assert.NotEmpty(t, link.TargetEntityId, "Should include target entity ID")
		//     assert.GreaterOrEqual(t, link.LinkStrength, 0.80, "Should meet linking threshold")
		//     assert.NotEmpty(t, link.SupportingTransactions, "Should include supporting transactions")
		//     assert.Contains(t, []entitypb.LinkType{
		//         entitypb.LinkType_FINANCIAL_RELATIONSHIP,
		//         entitypb.LinkType_BUSINESS_RELATIONSHIP,
		//         entitypb.LinkType_OWNERSHIP_RELATIONSHIP,
		//     }, link.LinkType, "Should include valid link type")
		// }
	})
}

func TestEntityResolutionService_MatchingAlgorithms_ShouldFailInitially(t *testing.T) {
	t.Skip("INTENTIONALLY FAILING: Entity Resolution Service not implemented yet (T012)")
	
	conn, err := grpc.Dial("entity-resolution:9002", grpc.WithInsecure())
	require.NoError(t, err)
	defer conn.Close()
	
	// client := entitypb.NewEntityResolutionServiceClient(conn)
	ctx := context.Background()
	
	t.Run("should use fuzzy matching for similar names", func(t *testing.T) {
		// Test fuzzy string matching algorithms
		testCases := []struct {
			name           string
			input          string
			expectedMatch  string
			minConfidence  float64
		}{
			{
				name:          "typo correction",
				input:         "Jon Smyth",
				expectedMatch: "John Smith",
				minConfidence: 0.80,
			},
			{
				name:          "different formatting",
				input:         "SMITH, JOHN",
				expectedMatch: "John Smith",
				minConfidence: 0.85,
			},
			{
				name:          "partial name match",
				input:         "J. Smith",
				expectedMatch: "John Smith",
				minConfidence: 0.70,
			},
		}
		
		for _, tc := range testCases {
			t.Run(tc.name, func(t *testing.T) {
				request := &entitypb.FuzzyMatchRequest{
					Query: tc.input,
					EntityType: entitypb.EntityType_PERSON,
					MatchAlgorithm: entitypb.MatchAlgorithm_LEVENSHTEIN_JARO_WINKLER,
				}
				
				// response, err := client.FuzzyMatch(ctx, request)
				// assert.NoError(t, err, "Should perform fuzzy matching")
				// assert.NotEmpty(t, response.Matches, "Should return matches")
				// 
				// // Find expected match in results
				// found := false
				// for _, match := range response.Matches {
				//     if match.Entity.Name == tc.expectedMatch && match.ConfidenceScore >= tc.minConfidence {
				//         found = true
				//         break
				//     }
				// }
				// assert.True(t, found, "Should find expected match with minimum confidence")
			})
		}
	})
	
	t.Run("should detect duplicate entities across systems", func(t *testing.T) {
		// Test cross-system duplicate detection - FR-008 from spec
		request := &entitypb.DetectDuplicatesRequest{
			SourceSystems: []string{"CRM", "ERP", "BANKING_CORE", "KYC_SYSTEM"},
			EntityType:    entitypb.EntityType_PERSON,
			DedupeRules: &entitypb.DeduplicationRules{
				ExactMatchFields:  []string{"tax_id", "passport_number"},
				FuzzyMatchFields:  []string{"name", "email"},
				SimilarityThreshold: 0.88,
			},
		}
		
		// response, err := client.DetectDuplicates(ctx, request)
		// assert.NoError(t, err, "Should detect duplicates")
		// assert.NotEmpty(t, response.DuplicateGroups, "Should return duplicate groups")
		// 
		// for _, group := range response.DuplicateGroups {
		//     assert.GreaterOrEqual(t, len(group.Entities), 2, "Each group should have at least 2 entities")
		//     assert.GreaterOrEqual(t, group.SimilarityScore, 0.88, "Should meet similarity threshold")
		//     
		//     // Verify all entities in group are from different source systems
		//     sourceSystems := make(map[string]bool)
		//     for _, entity := range group.Entities {
		//         sourceSystems[entity.SourceSystem] = true
		//     }
		//     assert.GreaterOrEqual(t, len(sourceSystems), 2, "Should span multiple source systems")
		// }
	})
}

func TestEntityResolutionService_GraphIntegration_ShouldFailInitially(t *testing.T) {
	t.Skip("INTENTIONALLY FAILING: Entity Resolution Service not implemented yet (T012)")
	
	conn, err := grpc.Dial("entity-resolution:9002", grpc.WithInsecure())
	require.NoError(t, err)
	defer conn.Close()
	
	// client := entitypb.NewEntityResolutionServiceClient(conn)
	ctx := context.Background()
	
	t.Run("should update graph database with resolved entities", func(t *testing.T) {
		// Test graph database integration - FR-009 from spec
		request := &entitypb.UpdateGraphRequest{
			EntityId: "entity-456",
			GraphUpdates: []*entitypb.GraphUpdate{
				{
					UpdateType: entitypb.GraphUpdateType_CREATE_NODE,
					NodeData: &entitypb.NodeData{
						Labels:     []string{"Person", "Customer"},
						Properties: map[string]string{
							"name":       "Alice Johnson",
							"entity_id":  "entity-456",
							"confidence": "0.92",
							"last_updated": time.Now().Format(time.RFC3339),
						},
					},
				},
				{
					UpdateType: entitypb.GraphUpdateType_CREATE_RELATIONSHIP,
					RelationshipData: &entitypb.RelationshipData{
						FromEntityId: "entity-456",
						ToEntityId:   "entity-123",
						RelationType: "TRANSFERRED_TO",
						Properties: map[string]string{
							"amount":     "25000.00",
							"currency":   "USD",
							"date":       "2024-01-15",
							"confidence": "0.95",
						},
					},
				},
			},
		}
		
		// response, err := client.UpdateGraph(ctx, request)
		// assert.NoError(t, err, "Should update graph database")
		// assert.True(t, response.Success, "Should successfully update graph")
		// assert.Equal(t, len(request.GraphUpdates), int(response.UpdatesApplied), "Should apply all updates")
		// assert.NotEmpty(t, response.GraphVersion, "Should return graph version")
	})
	
	t.Run("should handle concurrent entity resolution conflicts", func(t *testing.T) {
		// Test concurrent resolution handling - data integrity principle
		request := &entitypb.ResolveEntityRequest{
			EntityType: entitypb.EntityType_PERSON,
			Attributes: map[string]string{
				"name":  "Bob Wilson",
				"email": "bob@example.com",
			},
			ConflictResolution: &entitypb.ConflictResolution{
				Strategy: entitypb.ConflictStrategy_MERGE_BY_CONFIDENCE,
				MergePriority: []string{"BANKING_CORE", "KYC_SYSTEM", "CRM"},
			},
		}
		
		// response, err := client.ResolveEntity(ctx, request)
		// assert.NoError(t, err, "Should handle concurrent resolution")
		// assert.NotEmpty(t, response.EntityId, "Should return resolved entity ID")
		// 
		// if response.ConflictsDetected > 0 {
		//     assert.NotEmpty(t, response.ConflictResolution, "Should include conflict resolution details")
		//     assert.Equal(t, entitypb.ConflictStrategy_MERGE_BY_CONFIDENCE, 
		//         response.ConflictResolution.Strategy, "Should use specified strategy")
		// }
	})
}